k8s/configmap-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leave-management
